[package]
name = "wen"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["time", "date", "cli", "tool"]
categories = ["command-line-utilities"]
exclude = ["/target", ".gitignore"]
description = "Natural language CLI date parser built on timelib."

[dependencies]
iana-time-zone = "0.1.63"
timelib = "0.3.7"
chrono = "0.4"
regex = "1.11.2"
